--- a/app/src/main/res/layout/dialog_result.xml
+++ b/app/src/main/res/layout/dialog_result.xml
@@ -124,7 +124,7 @@
         app:constraint_referenced_ids="text_title_2,text_title_5,text_reading,text_listening" />
 
     <RatingBar
-        android:id="@+id/ratingBar"
+        android:id="@+id/rating_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_8"
@@ -173,7 +173,7 @@
         android:layout_marginEnd="@dimen/dp_8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
+        app:layout_constraintTop_toBottomOf="@+id/rating_bar" />
 
     <TextView
         android:id="@+id/text_number_question_true"
