--- a/app/src/main/res/layout/item_exam.xml
+++ b/app/src/main/res/layout/item_exam.xml
@@ -42,7 +42,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <RatingBar
-            android:id="@+id/ratingBar"
+            android:id="@+id/rating_bar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_40"
