--- a/app/src/main/res/layout/activity_grammar_test.xml
+++ b/app/src/main/res/layout/activity_grammar_test.xml
@@ -10,7 +10,7 @@
         android:id="@+id/text_background"
         android:layout_width="0dp"
         android:layout_height="@dimen/dp_50"
-        android:background="@color/material_cyan_300"
+        android:background="@color/material_teal_500"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
