--- a/app/src/main/res/layout/activity_vocabulary_detail.xml
+++ b/app/src/main/res/layout/activity_vocabulary_detail.xml
@@ -9,7 +9,7 @@
         android:id="@+id/text_background"
         android:layout_width="0dp"
         android:layout_height="@dimen/dp_50"
-        android:background="@color/material_cyan_300"
+        android:background="@color/material_teal_500"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -83,6 +83,7 @@
         app:layout_constraintTop_toBottomOf="@+id/text_background" />
 
     <ImageView
+        android:id="@+id/image_next"
         android:layout_width="@dimen/dp_30"
         android:layout_height="@dimen/dp_30"
         android:layout_marginTop="@dimen/dp_8"
@@ -93,6 +94,7 @@
         app:srcCompat="@drawable/ic_next_1" />
 
     <ImageView
+        android:id="@+id/image_back"
         android:layout_width="@dimen/dp_30"
         android:layout_height="@dimen/dp_30"
         android:layout_marginTop="@dimen/dp_8"
