--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="material_red_accent_200">#F95F62</color>
     <color name="material_white_100">#f9f6f6</color>
     <color name="material_teal_400">#30abaa</color>
+    <color name="material_teal_500">#43C6AC</color>
     <color name="light_green_accent_700">#0cfd04</color>
     <color name="red_accent_700">#fd0404</color>
     <color name="trasparent">#1effffff</color>
@@ -20,7 +21,7 @@
     <color name="marterial_indigo_400">#7266ba</color>
     <color name="marterial_indigo_500">#3f009e</color>
     <color name="material_cyan_300">#47e3c2</color>
-    <color name="material_accent_700">#11c698</color>
+    <color name="material_accent_700">#0FA37D</color>
     <color name="test_grammar">#ffe259</color>
     <color name="white">#ffffff</color>
     <color name="tranperant_white">#e1dfdf</color>
