--- a/app/src/main/res/layout/activity_grammar_test.xml
+++ b/app/src/main/res/layout/activity_grammar_test.xml
@@ -7,7 +7,7 @@
     tools:context=".screen.grammar_test.GrammarTestActivity">
 
     <TextView
-        android:id="@+id/text_background"
+        android:id="@+id/text_back_ground"
         android:layout_width="0dp"
         android:layout_height="@dimen/dp_50"
         android:background="@color/material_teal_500"
@@ -23,7 +23,7 @@
         android:layout_marginLeft="@dimen/dp_8"
         android:layout_marginTop="@dimen/dp_8"
         android:layout_marginBottom="@dimen/dp_8"
-        app:layout_constraintBottom_toBottomOf="@+id/text_background"
+        app:layout_constraintBottom_toBottomOf="@+id/text_back_ground"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_alarm"
@@ -40,7 +40,7 @@
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/sp_20"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/text_background"
+        app:layout_constraintBottom_toBottomOf="@+id/text_back_ground"
         app:layout_constraintStart_toEndOf="@+id/image_alarm"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -56,7 +56,7 @@
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/sp_20"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/text_background"
+        app:layout_constraintBottom_toBottomOf="@+id/text_back_ground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -69,7 +69,7 @@
         android:layout_marginRight="@dimen/dp_8"
         android:layout_marginBottom="@dimen/dp_8"
         android:background="@android:color/background_light"
-        app:layout_constraintBottom_toBottomOf="@+id/text_background"
+        app:layout_constraintBottom_toBottomOf="@+id/text_back_ground"
         app:layout_constraintEnd_toStartOf="@+id/text_submit"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -80,7 +80,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_background" />
+        app:layout_constraintTop_toBottomOf="@+id/text_back_ground" />
 
     <ImageView
         android:layout_width="@dimen/dp_30"
