--- a/app/src/main/res/layout/activity_vocabulary_detail.xml
+++ b/app/src/main/res/layout/activity_vocabulary_detail.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/text_background"
+        android:id="@+id/text_back_ground"
         android:layout_width="0dp"
         android:layout_height="@dimen/dp_50"
         android:background="@color/material_teal_500"
@@ -22,7 +22,7 @@
         android:layout_marginLeft="@dimen/dp_8"
         android:layout_marginTop="@dimen/dp_8"
         android:layout_marginBottom="@dimen/dp_8"
-        app:layout_constraintBottom_toBottomOf="@+id/text_background"
+        app:layout_constraintBottom_toBottomOf="@+id/text_back_ground"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_alarm"
@@ -39,7 +39,7 @@
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/sp_20"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/text_background"
+        app:layout_constraintBottom_toBottomOf="@+id/text_back_ground"
         app:layout_constraintStart_toEndOf="@+id/image_alarm"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -55,7 +55,7 @@
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/sp_20"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/text_background"
+        app:layout_constraintBottom_toBottomOf="@+id/text_back_ground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -68,7 +68,7 @@
         android:layout_marginRight="@dimen/dp_8"
         android:layout_marginBottom="@dimen/dp_8"
         android:background="@android:color/background_light"
-        app:layout_constraintBottom_toBottomOf="@+id/text_background"
+        app:layout_constraintBottom_toBottomOf="@+id/text_back_ground"
         app:layout_constraintEnd_toStartOf="@+id/text_submit"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -84,7 +84,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_background" />
+        app:layout_constraintTop_toBottomOf="@+id/text_back_ground" />
 
     <ImageView
         android:id="@+id/image_next"
