--- a/app/src/main/res/layout/activity_grammar_test.xml
+++ b/app/src/main/res/layout/activity_grammar_test.xml
@@ -83,6 +83,7 @@
         app:layout_constraintTop_toBottomOf="@+id/text_back_ground" />
 
     <ImageView
+        android:id="@+id/image_next_1"
         android:layout_width="@dimen/dp_30"
         android:layout_height="@dimen/dp_30"
         android:layout_marginTop="@dimen/dp_8"
@@ -93,6 +94,7 @@
         app:srcCompat="@drawable/ic_next_1" />
 
     <ImageView
+        android:id="@+id/image_back_1"
         android:layout_width="@dimen/dp_30"
         android:layout_height="@dimen/dp_30"
         android:layout_marginStart="@dimen/dp_8"
